--- a/project/src/main/res/layout/lx_details_presenter.xml
+++ b/project/src/main/res/layout/lx_details_presenter.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <com.expedia.bookings.presenter.lx.LXDetailsPresenter xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/activity_details_presenter"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@android:color/white">
@@ -19,106 +20,135 @@
         android:layout_height="match_parent"
         android:background="@color/lx_details_background_color">
 
-        <LinearLayout
+        <com.expedia.bookings.widget.ScrollView
+            android:id="@+id/scroll_view"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:layout_height="match_parent">
 
-            <include layout="@layout/section_activity_details_gallery" />
-
-            <include
-                layout="@layout/section_activity_details_price_info"
-                android:layout_width="match_parent"
-                android:layout_height="@dimen/price_info_container_height"
-                android:layout_marginTop="@dimen/price_info_container_top_margin" />
-
-            <include
-                android:id="@+id/highlights"
-                layout="@layout/widget_lx_detail_section_data" />
-
-            <HorizontalScrollView
-                android:id="@+id/offer_dates_scroll_view"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:scrollbars="none"
-                android:background="@drawable/lx_dates_container_background">
-
-                <RadioGroup
-                    android:id="@+id/offer_dates_container"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal" />
-
-            </HorizontalScrollView>
-
-            <com.expedia.bookings.widget.LXOffersListWidget
-                android:id="@+id/offers"
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
 
+                <FrameLayout
+                    android:id="@+id/gallery_container"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                    <include layout="@layout/section_activity_details_gallery" />
+
+                    <View
+                        android:layout_width="match_parent"
+                        android:layout_height="120dp"
+                        android:background="@drawable/lx_details_gradient_top" />
+                    <include
+                        layout="@layout/section_activity_details_price_info"
+                        android:layout_width="match_parent"
+                        android:layout_height="60dp"
+                        android:layout_marginTop="180dp" />
+
+                </FrameLayout>
+
                 <LinearLayout
-                    android:id="@+id/offers_container"
+                    android:id="@+id/activity_details_container"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:divider="?android:dividerHorizontal"
                     android:orientation="vertical"
-                    android:showDividers="middle|end" />
+                    android:background="@color/lx_details_background_color">
 
-                <LinearLayout
-                    android:id="@+id/offer_show_more_container"
+                <include
+                    android:id="@+id/highlights"
+                    layout="@layout/widget_lx_detail_section_data" />
+
+                <HorizontalScrollView
+                    android:id="@+id/offer_dates_scroll_view"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:divider="?android:dividerHorizontal"
-                    android:orientation="vertical"
-                    android:showDividers="end"
-                    android:visibility="gone">
+                    android:background="@drawable/lx_dates_container_background"
+                    android:scrollbars="none">
 
-                    <com.expedia.bookings.widget.ShowMoreWithCountWidget
-                        android:id="@+id/show_more_widget"
-                        android:layout_width="wrap_content"
-                        android:layout_height="match_parent"
-                        android:layout_gravity="center"
-                        android:layout_marginBottom="8dp"
-                        android:layout_marginTop="8dp"
-                        android:background="?android:attr/selectableItemBackground" />
+                    <RadioGroup
+                        android:id="@+id/offer_dates_container"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal" />
 
+                </HorizontalScrollView>
+
+                <com.expedia.bookings.widget.LXOffersListWidget
+                    android:id="@+id/offers"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
+
+                    <LinearLayout
+                        android:id="@+id/offers_container"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:divider="?android:dividerHorizontal"
+                        android:orientation="vertical"
+                        android:showDividers="middle|end" />
+
+                    <LinearLayout
+                        android:id="@+id/offer_show_more_container"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:divider="?android:dividerHorizontal"
+                        android:orientation="vertical"
+                        android:showDividers="end"
+                        android:visibility="gone">
+
+                        <com.expedia.bookings.widget.ShowMoreWithCountWidget
+                            android:id="@+id/show_more_widget"
+                            android:layout_width="wrap_content"
+                            android:layout_height="match_parent"
+                            android:layout_gravity="center"
+                            android:layout_marginBottom="8dp"
+                            android:layout_marginTop="8dp"
+                            android:background="?android:attr/selectableItemBackground" />
+
+                    </LinearLayout>
+                </com.expedia.bookings.widget.LXOffersListWidget>
+
+                <include
+                    android:id="@+id/description"
+                    layout="@layout/widget_lx_detail_section_data" />
+
+                <include
+                    android:id="@+id/inclusions"
+                    layout="@layout/widget_lx_detail_section_data" />
+
+                <include
+                    android:id="@+id/exclusions"
+                    layout="@layout/widget_lx_detail_section_data" />
+
+                <include
+                    android:id="@+id/know_before_you_book"
+                    layout="@layout/widget_lx_detail_section_data" />
+
+                <include
+                    android:id="@+id/cancellation"
+                    layout="@layout/widget_lx_detail_section_data" />
+
+                <include
+                    android:id="@+id/location"
+                    layout="@layout/widget_lx_detail_section_data" />
                 </LinearLayout>
-            </com.expedia.bookings.widget.LXOffersListWidget>
-
-            <include
-                android:id="@+id/description"
-                layout="@layout/widget_lx_detail_section_data" />
-
-            <include
-                android:id="@+id/inclusions"
-                layout="@layout/widget_lx_detail_section_data" />
-
-            <include
-                android:id="@+id/exclusions"
-                layout="@layout/widget_lx_detail_section_data" />
-
-            <include
-                android:id="@+id/know_before_you_book"
-                layout="@layout/widget_lx_detail_section_data" />
-
-            <include
-                android:id="@+id/cancellation"
-                layout="@layout/widget_lx_detail_section_data" />
-
-            <include
-                android:id="@+id/location"
-                layout="@layout/widget_lx_detail_section_data" />
-        </LinearLayout>
-
+            </LinearLayout>
+        </com.expedia.bookings.widget.ScrollView>
     </com.expedia.bookings.widget.LXActivityDetailsWidget>
+
+    <View
+        android:id="@+id/toolbar_background"
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
+        android:background="@color/lx_primary_color" />
 
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="top"
-        android:background="@color/lx_primary_color"
         android:minHeight="?attr/actionBarSize"
         app:subtitleTextAppearance="@style/LXToolbarSubtitleTextAppearance"
         app:titleTextAppearance="@style/LXToolbarTitleTextAppearance" />
