--- a/project/src/main/res/layout/widget_lx_detail_section_data.xml
+++ b/project/src/main/res/layout/widget_lx_detail_section_data.xml
@@ -3,14 +3,15 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
+    android:background="@color/lx_details_background_color"
     android:padding="15dp">
 
     <TextView
         android:id="@+id/section_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textColor="@color/lx_details_text_color"
-        android:textSize="12sp"
+        android:textColor="@color/lx_details_heading_text_color"
+        android:textSize="11sp"
         android:textAllCaps="true"
         android:textStyle="bold" />
 
@@ -18,8 +19,9 @@
         android:id="@+id/section_content"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textColor="@color/lx_details_text_color"
-        android:textSize="12sp" />
+        android:textColor="@color/lx_details_content_text_color"
+        android:lineSpacingExtra="2dp"
+        android:textSize="11sp" />
 
     <TextView
         android:id="@+id/read_more"
