--- a/project/src/main/res/values/colors.xml
+++ b/project/src/main/res/values/colors.xml
@@ -267,7 +267,7 @@
     <color name="lx_details_heading_text_color">#3C3C3C</color>
     <color name="lx_details_content_text_color">#585858</color>
     <color name="lx_offer_background_color">#7C7C7C</color>
-    <color name="lx_details_background_color">#EEEEED</color>
+    <color name="lx_details_background_color">#eaeaea</color>
     <color name="lx_ticket_summary_color">#676767</color>
     <color name="lx_ticket_title_color">#3C3C3C</color>
     <color name="lx_select_ticket_button_color">#7C7C7C</color>
