--- a/project/src/main/res/layout/checkout_breakdown_price_disclaimer.xml
+++ b/project/src/main/res/layout/checkout_breakdown_price_disclaimer.xml
@@ -5,5 +5,5 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:padding="12dp"
-    android:textColor="@color/cars_actionbar_text_color"
+    android:textColor="?attr/skin_actionbarTextColor"
     android:textSize="12sp" />
