--- a/project/src/main/res/values/styles_cars.xml
+++ b/project/src/main/res/values/styles_cars.xml
@@ -44,6 +44,9 @@
         <!-- CVV attrs -->
         <item name="skin_cvvBookButtonKeypadDrawable">@drawable/btn_cvv_keypad_book</item>
         <item name="skin_cvvBookButtonTextColor">@android:color/black</item>
+
+        <!-- Action Bar Attrs -->
+        <item name="skin_actionbarTextColor">@color/cars_actionbar_text_color</item>
     </style>
 
     <style name="CarsActionBarTitle" parent="V2.Theme.Cars">
