--- a/project/src/main/res/values/styles_lx.xml
+++ b/project/src/main/res/values/styles_lx.xml
@@ -43,6 +43,9 @@
 
         <item name="card_list_image_container_height">@dimen/lx_search_list_image_container_height</item>
         <item name="card_details_container_height">@dimen/lx_search_details_container_height</item>
+
+        <!-- Action Bar Attrs -->
+        <item name="skin_actionbarTextColor">@color/lx_actionbar_text_color</item>
     </style>
 
     <style name="DateRadioButton" parent="V2.Theme.LX">
