--- a/project/src/main/res/layout/section_lx_search_row.xml
+++ b/project/src/main/res/layout/section_lx_search_row.xml
@@ -2,11 +2,12 @@
 <android.support.v7.widget.CardView
     android:id="@+id/results_card_view"
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:card_view="http://schemas.android.com/apk/res-auto"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:foreground="?android:attr/selectableItemBackground"
-    card_view:cardCornerRadius="4dp">
+    app:cardCornerRadius="3dp"
+    app:cardElevation="1dp">
 
     <FrameLayout
         android:layout_width="match_parent"
@@ -19,8 +20,9 @@
             android:layout_height="?attr/card_list_image_container_height" />
 
         <View
+            android:id="@+id/gradient_mask"
             android:layout_width="match_parent"
-            android:layout_height="72dp"
+            android:layout_height="67dp"
             android:layout_gravity="bottom"
             android:background="@drawable/lx_result_list_gradient_bottom" />
 
@@ -30,7 +32,10 @@
             android:layout_height="wrap_content"
             android:layout_gravity="bottom"
             android:orientation="horizontal"
-            android:padding="10dp">
+            android:paddingBottom="9dp"
+            android:paddingLeft="12dp"
+            android:paddingRight="12dp"
+            android:paddingTop="9dp">
 
             <TextView
                 android:id="@+id/activity_title"
@@ -41,7 +46,8 @@
                 android:gravity="left"
                 android:maxLines="2"
                 android:textColor="@android:color/white"
-                android:textSize="14sp" />
+                android:textSize="16sp"
+                app:textStyle="medium"/>
 
             <LinearLayout
                 android:layout_width="0dp"
@@ -56,7 +62,8 @@
                     android:layout_height="wrap_content"
                     android:gravity="right"
                     android:textColor="@android:color/white"
-                    android:textSize="14sp" />
+                    android:textSize="16sp"
+                    app:textStyle="medium"/>
 
                 <TextView
                     android:id="@+id/activity_from_price_ticket_type"
@@ -64,7 +71,8 @@
                     android:layout_height="wrap_content"
                     android:gravity="right"
                     android:textColor="@android:color/white"
-                    android:textSize="14sp" />
+                    android:textSize="16sp"
+                    app:textStyle="medium"/>
             </LinearLayout>
 
         </LinearLayout>
@@ -76,15 +84,17 @@
         android:layout_height="?attr/card_details_container_height"
         android:layout_marginTop="?attr/card_list_image_container_height"
         android:background="@android:color/white"
-        android:paddingLeft="10dp"
-        android:paddingRight="10dp">
+        android:orientation="horizontal"
+        android:padding="12dp">
 
         <TextView
             android:id="@+id/activity_category"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
+            android:layout_height="match_parent"
+            android:gravity="center_vertical"
+            android:includeFontPadding="false"
             android:layout_marginRight="4dp"
+            android:paddingLeft="4dp"
             android:drawableLeft="@drawable/ticket"
             android:drawablePadding="4dp"
             android:textColor="@color/lx_search_result_info_text_color"
@@ -97,8 +107,11 @@
             android:layout_gravity="center_vertical|right"
             android:drawableLeft="@drawable/time"
             android:drawablePadding="4dp"
+            android:paddingRight="4dp"
             android:gravity="right"
             android:textColor="@color/lx_search_result_info_text_color"
             android:textSize="10sp" />
+
     </FrameLayout>
+
 </android.support.v7.widget.CardView>
