--- a/project/src/main/res/values/colors.xml
+++ b/project/src/main/res/values/colors.xml
@@ -250,8 +250,8 @@
     <color name="lx_valid_days_calendar">#3A3A3A</color>
     <color name="lx_invalid_days_calendar">#A9A9A9</color>
     <color name="lx_calendar_week_color">#888888</color>
-    <color name="lx_search_result_info_text_color">#5C5C5C</color>
-    <color name="lx_dates_text_color">#6C6C6C</color>
+    <color name="lx_search_result_info_text_color">#888888</color>
+    <color name="lx_dates_text_color">#707070</color>
     <color name="lx_details_text_color">#525252</color>
     <color name="lx_details_heading_text_color">#3C3C3C</color>
     <color name="lx_details_content_text_color">#585858</color>
@@ -272,4 +272,5 @@
     <color name="lx_dates_container_border_color">#CCCCCC</color>
 
     <color name="search_dropdown_disabled_stroke">#C3C3C3</color>
+    <color name="lx_sort_filter_text_color">#404040</color>
 </resources>
