Transition animation from search to search results.

--- a/project/src/main/res/layout/lx_result_presenter.xml
+++ b/project/src/main/res/layout/lx_result_presenter.xml
@@ -43,12 +43,17 @@
 
     </com.expedia.bookings.widget.LXSearchResultsWidget>
 
+    <View
+        android:id="@+id/toolbar_background"
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
+        android:background="@color/lx_primary_color" />
+
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="top"
-        android:background="@color/lx_primary_color"
         android:minHeight="?attr/actionBarSize"
         app:subtitleTextAppearance="@style/LXToolbarSubtitleTextAppearance"
         app:titleTextAppearance="@style/LXToolbarTitleTextAppearance" />
