--- a/project/src/main/res/drawable/lx_select_ticket_button_selector.xml
+++ b/project/src/main/res/drawable/lx_select_ticket_button_selector.xml
@@ -1,16 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:state_pressed="true" android:state_checked="true">
+    <item android:state_pressed="true" >
         <shape android:shape="rectangle">
-            <solid android:color="@color/cars_actionbar_text_color" />
-            <corners android:radius="4dp" />
+            <solid android:color="@color/lx_primary_color" />
+            <corners android:radius="3dp" />
         </shape>
     </item>
 
     <item>
         <shape android:shape="rectangle">
             <solid android:color="@color/lx_select_ticket_button_color" />
-            <corners android:radius="4dp" />
+            <corners android:radius="3dp" />
         </shape>
     </item>
 </selector>
