--- a/project/src/main/res/layout/lx_ticket_picker.xml
+++ b/project/src/main/res/layout/lx_ticket_picker.xml
@@ -6,7 +6,7 @@
     android:layout_height="wrap_content"
     android:gravity="center"
     android:orientation="horizontal"
-    android:padding="10dp">
+    android:padding="14dp">
 
     <TextView
         android:id="@+id/ticket_details"
@@ -16,15 +16,12 @@
         android:textColor="@color/lx_ticket_summary_color"
         android:textSize="12dp" />
 
-    <Button
+    <ImageButton
         android:id="@+id/ticket_remove"
-        android:layout_width="25dp"
-        android:layout_height="25dp"
-        android:background="@drawable/lx_ticket_picker_selector"
-        android:text="&#8211;"
-        android:gravity="center"
-        android:textColor="@color/lx_secondary_color"
-        android:textSize="16dp" />
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@drawable/lx_ticket_minus_button_selector"
+        android:gravity="center" />
 
     <TextView
         android:id="@+id/ticket_count"
@@ -33,18 +30,14 @@
         android:layout_gravity="center"
         android:layout_weight="0.3"
         android:gravity="center"
-        android:textColor="@color/lx_secondary_color"
+        android:textColor="@color/lx_primary_color"
         android:textSize="16dp" />
 
-    <Button
+    <ImageButton
         android:id="@+id/ticket_add"
-        android:layout_width="25dp"
-        android:layout_height="25dp"
-        android:layout_marginRight="5dp"
-        android:background="@drawable/lx_ticket_picker_selector"
-        android:text="&#43;"
-        android:gravity="center"
-        android:textColor="@color/lx_secondary_color"
-        android:textSize="16dp" />
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@drawable/lx_ticket_plus_button_selector"
+        android:gravity="center" />
 
 </com.expedia.bookings.widget.LXTicketPicker>
