Display read more in details after 3 lines of text.
Show bulleted list for the list of details which come from the api.
Earlier we were concatinating the list of strings from api.

--- a/project/src/main/res/layout/widget_lx_detail_section_data.xml
+++ b/project/src/main/res/layout/widget_lx_detail_section_data.xml
@@ -1,36 +1,40 @@
 <?xml version="1.0" encoding="utf-8"?>
 <com.expedia.bookings.widget.LXDetailSectionDataWidget xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
     android:background="@color/lx_details_background_color"
-    android:padding="15dp">
+    android:padding="15dp"
+    android:id="@+id/section_container">
 
-    <TextView
+    <com.expedia.bookings.widget.TextView
         android:id="@+id/section_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textColor="@color/lx_details_heading_text_color"
         android:textSize="11sp"
         android:textAllCaps="true"
-        android:textStyle="bold" />
+        app:textStyle="bold" />
 
-    <TextView
+    <com.expedia.bookings.widget.TextView
         android:id="@+id/section_content"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textColor="@color/lx_details_content_text_color"
         android:lineSpacingExtra="2dp"
-        android:textSize="11sp" />
+        android:maxLines="3"
+        android:textSize="11sp"
+        app:textStyle="normal"/>
 
-    <TextView
+    <com.expedia.bookings.widget.TextView
         android:id="@+id/read_more"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="?attr/selectableItemBackground"
         android:gravity="right"
         android:text="@string/lx_details_read_more"
         android:textColor="@color/lx_primary_color"
-        android:textSize="12sp"
-        android:visibility="gone" />
+        android:textSize="11sp" />
 
 </com.expedia.bookings.widget.LXDetailSectionDataWidget>
