--- a/project/src/main/res/layout/widget_lx_confirmation.xml
+++ b/project/src/main/res/layout/widget_lx_confirmation.xml
@@ -1,91 +1,119 @@
 <?xml version="1.0" encoding="utf-8"?>
-<merge xmlns:android="http://schemas.android.com/apk/res/android">
+<merge xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">
-    <FrameLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-        <com.expedia.bookings.widget.OptimizedImageView
-            android:id="@+id/confirmation_image_view"
+        <FrameLayout
             android:layout_width="match_parent"
-            android:layout_height="215dp" />
+            android:layout_height="wrap_content">
 
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="215dp"
-            android:layout_gravity="center"
-            android:background="@color/lx_confirmation_gradient" />
+            <com.expedia.bookings.widget.OptimizedImageView
+                android:id="@+id/confirmation_image_view"
+                android:layout_width="match_parent"
+                android:layout_height="215dp" />
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="215dp"
+                android:layout_gravity="center"
+                android:background="@color/lx_confirmation_gradient" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/text_container"
+                android:layout_gravity="center"
+                android:orientation="vertical">
+
+                <TextView
+                    android:id="@+id/title"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:textColor="@color/itin_white_text"
+                    android:textSize="14dp" />
+
+                <TextView
+                    android:id="@+id/location"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:textColor="@color/itin_white_text"
+                    android:textSize="12dp" />
+
+                <TextView
+                    android:id="@+id/tickets"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:textColor="@color/itin_white_text"
+                    android:layout_marginTop="20dp"
+                    android:textSize="12dp" />
+
+                <TextView
+                    android:id="@+id/date"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:textColor="@color/itin_white_text"
+                    android:textSize="12dp" />
+            </LinearLayout>
+
+            <android.support.v7.widget.Toolbar
+                android:id="@+id/toolbar"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="top"
+                android:minHeight="?attr/actionBarSize" />
+
+        </FrameLayout>
 
         <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:orientation="vertical">
-
-            <TextView
-                android:id="@+id/title"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="center"
-                android:textColor="@color/itin_white_text"
-                android:textSize="14dp" />
-
-            <TextView
-                android:id="@+id/location"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="center"
-                android:textColor="@color/itin_white_text"
-                android:textSize="12dp" />
-
-            <TextView
-                android:id="@+id/tickets"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="center"
-                android:textColor="@color/itin_white_text"
-                android:textSize="12dp" />
-
-            <TextView
-                android:id="@+id/date"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="center"
-                android:textColor="@color/itin_white_text"
-                android:textSize="12dp" />
-        </LinearLayout>
-
-        <android.support.v7.widget.Toolbar
-            android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="top"
-            android:minHeight="?attr/actionBarSize" />
+            android:background="#4E555E"
+            android:orientation="vertical">
 
-    </FrameLayout>
+            <com.expedia.bookings.widget.TextView
+                android:id="@+id/support_action_textView"
+                style="@style/LXBookingButton"
+                android:text="@string/call_customer_support"
+                android:drawableLeft="@drawable/ic_phone"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="1dp"
+                android:textColor="@color/lx_confirmation_action_text_color" />
 
-    <Button
-        android:id="@+id/call_action_button"
-        style="@style/LXConfirmationButton"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="2dp"
-        android:layout_marginTop="2dp"
-        android:drawableLeft="@drawable/call_action"
-        android:text="@string/call_customer_support"
-        android:textColor="@color/lx_confirmation_action_text_color" />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="#3A424C"
+                android:orientation="vertical"
+                android:padding="16dp">
 
-    <TextView
-        android:id="@+id/itinerary_text_view"
-        style="@style/LXConfirmationButton"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:textColor="@color/lx_confirmation_action_text_color"
-        android:textSize="15sp" />
+                <com.expedia.bookings.widget.TextView
+                    android:id="@+id/confirmation_text"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+                    android:textColor="@color/lx_confirmation_email_text_color"
+                    android:textSize="12sp"
+                    app:textStyle="light" />
+
+                <com.expedia.bookings.widget.TextView
+                    android:id="@+id/email_text"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+                    android:textColor="@color/lx_confirmation_email_text_color"
+                    android:textSize="12sp"
+                    app:textStyle="light" />
+            </LinearLayout>
+
+        </LinearLayout>
     </LinearLayout>
+
 </merge>
