--- a/project/src/main/res/values/colors.xml
+++ b/project/src/main/res/values/colors.xml
@@ -264,7 +264,9 @@
     <color name="lx_actionbar_text_color">#5C5C5C</color>
     <color name="lx_confirmation_gradient">#80000000</color>
     <color name="lx_confirmation_background">#1A1D20</color>
+    <color name="lx_confirmation_icon_color">#D1D3D6</color>
     <color name="lx_confirmation_action_text_color">#F3F3F3</color>
+    <color name="lx_confirmation_email_text_color">#C8C8C8</color>
     <color name="lx_sort_filter_background_color">#E4E4E4</color>
     <color name="lx_checkout_text_color">#676767</color>
     <color name="lx_info_secondary_text_color">#CDCDCD</color>
