--- a/project/src/main/res/layout/section_activity_details_price_info.xml
+++ b/project/src/main/res/layout/section_activity_details_price_info.xml
@@ -9,7 +9,7 @@
     android:orientation="vertical"
     android:padding="10dp">
 
-    <TextView
+    <com.expedia.bookings.widget.TextView
         android:id="@+id/title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -17,31 +17,35 @@
         android:layout_marginRight="60dp"
         android:singleLine="true"
         android:textColor="@android:color/white"
-        android:textSize="16sp"/>
+        android:textSize="16sp"
+        app:textStyle="normal" />
 
-    <TextView
+    <com.expedia.bookings.widget.TextView
         android:id="@+id/price"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
         android:layout_gravity="right"
         android:textColor="@android:color/white"
-        android:textSize="16sp" />
+        android:textSize="16sp"
+        app:textStyle="normal" />
 
-    <TextView
+    <com.expedia.bookings.widget.TextView
         android:id="@+id/category"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/title"
         android:textColor="@color/lx_info_secondary_text_color"
-        android:textSize="11sp" />
+        android:textSize="11sp"
+        app:textStyle="normal" />
 
-    <TextView
+    <com.expedia.bookings.widget.TextView
         android:id="@+id/per_ticket_type"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignRight="@id/price"
         android:layout_below="@id/price"
         android:textColor="@color/lx_info_secondary_text_color"
-        android:textSize="11sp" />
+        android:textSize="11sp"
+        app:textStyle="normal" />
 </RelativeLayout>
