--- a/project/src/main/res/values/styles.xml
+++ b/project/src/main/res/values/styles.xml
@@ -1089,10 +1089,14 @@
     </style>
 
     <style name="LXOfferDayTextView">
+        <item name="android:fontFamily">sans-serif</item>
+        <item name="android:textStyle">bold</item>
         <item name="android:textSize">11sp</item>
     </style>
 
     <style name="LXOfferDateTextView">
+        <item name="android:fontFamily">sans-serif</item>
+        <item name="android:textStyle">normal</item>
         <item name="android:textSize">15sp</item>
     </style>
 
