--- a/project/src/main/res/layout/lx_result_presenter.xml
+++ b/project/src/main/res/layout/lx_result_presenter.xml
@@ -26,7 +26,8 @@
             android:layout_gravity="bottom"
             android:gravity="center"
             android:background="@color/lx_sort_filter_background_color"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:visibility="gone">
 
             <ImageView
                 android:layout_width="wrap_content"
