--- a/project/src/main/res/drawable/lx_autocomplete_background_selector.xml
+++ b/project/src/main/res/drawable/lx_autocomplete_background_selector.xml
@@ -3,7 +3,7 @@
     <item android:state_pressed="true" >
         <shape android:shape="rectangle">
             <solid android:color="@color/lx_dropdown_background_color" />
-            <stroke android:color="@color/lx_secondary_color" android:width="2px" />
+            <stroke android:color="@color/lx_primary_color" android:width="2px" />
             <corners android:radius="3dp" />
         </shape>
 
@@ -12,7 +12,7 @@
     <item android:state_focused="true">
         <shape android:shape="rectangle">
             <solid android:color="#f0f0f0" />
-            <stroke android:color="@color/lx_secondary_color" android:width="2px" />
+            <stroke android:color="@color/lx_primary_color" android:width="2px" />
             <corners android:radius="3dp" />
         </shape>
     </item>
