--- a/project/src/main/res/layout/show_more_with_count_layout.xml
+++ b/project/src/main/res/layout/show_more_with_count_layout.xml
@@ -16,7 +16,7 @@
         android:layout_height="wrap_content"
         android:paddingLeft="5dp"
         android:text="@string/lx_show_more_offers"
-        android:textColor="@color/lx_secondary_color"
+        android:textColor="@color/lx_primary_color"
         android:textSize="13sp"
         android:textStyle="bold" />
 </merge>
