--- a/project/src/main/res/values/styles_lx.xml
+++ b/project/src/main/res/values/styles_lx.xml
@@ -11,7 +11,7 @@
         <item name="checkout_slider_text">@string/lx_slider_text</item>
         <item name="toolbar_title_style">@style/LXToolbarTitleTextAppearance</item>
         <item name="android:textColorSecondary">@color/lx_actionbar_text_color</item>
-        <item name="android:colorPrimaryDark">@color/lx_secondary_color</item>
+        <item name="android:colorPrimaryDark">#A8540D</item>
         <item name="android:colorButtonNormal">@color/lx_primary_color</item>
         <item name="colorControlNormal">#C3C3C3</item>
         <item name="actionMenuTextColor">#FFFFFF</item>
@@ -90,11 +90,6 @@
         <item name="android:textSize">11sp</item>
         <item name="android:textColor">#FFFFFF</item>
         <item name="android:textStyle">normal</item>
-    </style>
-
-    <style name="LXSearchToolbarTitleTextAppearance" parent="V2.Theme.LX">
-        <item name="android:textSize">16sp</item>
-        <item name="android:textColor">@color/lx_actionbar_text_color</item>
     </style>
 
     <style name="LXCardView" parent="V2.Theme.LX">
