Details screen UI Polish
	1. Remove activity details info container completely.
	2. Set activity title in toolbar instead of location.
	3. First ticket details card open by default.
	4. Extra line spacing b/w content.
	5. First selected date as the left most.
	6. Read more only for highlights and description.

--- a/project/src/main/res/layout/lx_offer_date_button.xml
+++ b/project/src/main/res/layout/lx_offer_date_button.xml
@@ -2,6 +2,6 @@
 <com.expedia.bookings.widget.LXOfferDatesButton
     style="@style/DateRadioButton"
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="50dp"
-    android:layout_height="54dp"
+    android:layout_width="@dimen/lx_offer_dates_container_width"
+    android:layout_height="@dimen/lx_offer_dates_container_height"
     android:textSize="10dp" />
