--- a/project/src/main/res/values/integers.xml
+++ b/project/src/main/res/values/integers.xml
@@ -282,4 +282,6 @@
     <integer name="calendar_max_days_lx_search">330</integer>
     <integer name="lx_default_search_range">14</integer>
     <integer name="lx_offers_list_initial_size">3</integer>
+    <integer name="lx_detail_content_description_max_lines">5</integer>
+
 </resources>
