--- a/project/src/main/res/layout/lx_details_presenter.xml
+++ b/project/src/main/res/layout/lx_details_presenter.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.expedia.bookings.presenter.lx.LXDetailsPresenter xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<com.expedia.bookings.presenter.lx.LXDetailsPresenter
     android:id="@+id/activity_details_presenter"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@android:color/white">
@@ -20,41 +21,31 @@
         android:layout_height="match_parent"
         android:background="@color/lx_details_background_color">
 
-        <com.expedia.bookings.widget.ScrollView
-            android:id="@+id/scroll_view"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <FrameLayout
+                android:id="@+id/gallery_container"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <include layout="@layout/section_activity_details_gallery" />
+
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="120dp"
+                    android:background="@drawable/lx_details_gradient_top" />
+
+            </FrameLayout>
 
             <LinearLayout
+                android:id="@+id/activity_details_container"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:background="@color/lx_details_background_color"
                 android:orientation="vertical">
-
-                <FrameLayout
-                    android:id="@+id/gallery_container"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
-
-                    <include layout="@layout/section_activity_details_gallery" />
-
-                    <View
-                        android:layout_width="match_parent"
-                        android:layout_height="120dp"
-                        android:background="@drawable/lx_details_gradient_top" />
-                    <include
-                        layout="@layout/section_activity_details_price_info"
-                        android:layout_width="match_parent"
-                        android:layout_height="60dp"
-                        android:layout_marginTop="180dp" />
-
-                </FrameLayout>
-
-                <LinearLayout
-                    android:id="@+id/activity_details_container"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical"
-                    android:background="@color/lx_details_background_color">
 
                 <include
                     android:id="@+id/highlights"
@@ -91,9 +82,9 @@
 
                     <LinearLayout
                         android:id="@+id/offer_show_more_container"
-                        android:background="?attr/selectableItemBackground"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:background="?attr/selectableItemBackground"
                         android:divider="?android:dividerHorizontal"
                         android:orientation="vertical"
                         android:showDividers="end"
@@ -133,9 +124,8 @@
                 <include
                     android:id="@+id/location"
                     layout="@layout/widget_lx_detail_section_data" />
-                </LinearLayout>
             </LinearLayout>
-        </com.expedia.bookings.widget.ScrollView>
+        </LinearLayout>
     </com.expedia.bookings.widget.LXActivityDetailsWidget>
 
     <View
